@@ -96,6 +96,7 @@ export class MainComponent implements OnInit {
 
   ngOnInit() {
     this.shop_username = this.route.snapshot.params['username'];
+    this.isNavOpen = !ScreenHelper.isMobileSize();
     this.router.events.pipe(takeUntil(this.ngUnsubscribe))
       .subscribe(event => {
         if (event instanceof NavigationEnd) {
@@ -110,10 +111,8 @@ export class MainComponent implements OnInit {
         }
       })
     this.screenService.isMobileSize.pipe(takeUntil(this.ngUnsubscribe)).subscribe(result => {
-      this.isMobileSize = result; 
-      this.isNavOpen = true;
+      this.isMobileSize = result;
       if (this.isMobileSize) {
-        this.isNavOpen = false;
         this.sharedNavbarService.isNavSubject.next(this.isNavOpen);
       }
     })
