@@ -7,6 +7,7 @@
 - 2020-06-14                                -
 ---------------------------------------------
 .: WSM: Action icon UI (WSM-131)
+.: WSM: Navigation is closed when click on add new category input (WSM-132)
 
 ---------------------------------------------
 - 2020-06-13                                -
